ingress-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/add-base-url":"true","nginx.ingress.kubernetes.io/ingress-class":"nginx","nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"api-ingress","namespace":"exam"},"spec":{"ingressClassName":"nginx","rules":[{"host":"projet.com","http":{"paths":[{"backend":{"service":{"name":"backend-app-service","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}]}}
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/ingress-class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  creationTimestamp: "2023-12-06T20:49:32Z"
  generation: 1
  name: api-ingress
  namespace: exam
  resourceVersion: "58771"
  uid: 4becd010-c9cc-4ced-b428-8cbd8c45a35d
spec:
  ingressClassName: nginx
  rules:
  - host: api.com
    http:
      paths:
      - backend:
          service:
            name: backend-app-service
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - hostname: localhost
